# Four_D_Rotator

./: .gitignore  Enhancements.md  Four_D_Rotator_Demo.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
Four_D_Rotator/: __init__.py  _constants.py  analysis.py  demos.py  geometry.py  io_json.py  io_obj.py  plotting.py  presets.py
tests/: test_exports.py  test_geometry.py
