[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Four-D-Rotator"
version = "1.0.0"
description = "Toolkit for rotating and slicing a 4D tesseract into 3D geometry."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [{ name = "Michael Bagalman" }]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.4",
  "ipywidgets>=7.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["Four_D_Rotator*"]
